@@ -1,5 +1,13 @@
 2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
 	
+	* gameswf/gameswf_movie_def.cpp: added ifdef USE_SEPARATE_THREAD,
+	there is problem while loading movies in separate thread
+	assert(vi2 != vi0) in line 982, file ear_clip_triangulate_impl.h;
+	during displaying static text, new release will be put
+	after fixing this problem
+
+2007-03-22  Vitaly Alexeev <tishka92@yahoo.com>
+	
 	* gameswf/gameswf_sound_handler.(cpp,h): rewrited mixer,
 	It is decoded only so much samples how much to be located in 
 	the handler buffer (required for stream sound)
